Updated README.md with a benchmark of GA and AC

--- a/SMA/ants.ipynb
+++ b/SMA/ants.ipynb
@@ -2,13 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 209,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stderr",
+     "text": [
+      "/anaconda3/envs/ml/lib/python3.7/site-packages/ipykernel_launcher.py:5: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  \"\"\"\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
     "from __future__ import print_function\n",
     "import numpy as np\n",
     "import random as rnd\n",
     "from sys import exit\n",
+    "from tqdm.autonotebook import tqdm\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
     "import ipywidgets as widgets"
    ],
@@ -22,15 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "class Salesman:\n",
-    "    def __init__(self, c: int, a: int, alpha:float=.1, beta:float=1.1, gamma:float=.1, generate:bool=True, path:str=\"cities_example.txt\"):\n",
+    "    def __init__(self, c: int, a: int, start: int=0, alpha:float=.1, beta:float=1.1, gamma:float=.1, generate:bool=True, path:str=\"cities_example.txt\", verbose:bool=False):\n",
     "        self.cities = c\n",
-    "        self.start = rnd.randint(0, c - 1)\n",
+    "        self.start = start\n",
     "        self.ants = a\n",
     "        self.k = 10 * c\n",
+    "        \n",
+    "        self.verbose = verbose\n",
     "        \n",
     "        if generate:\n",
     "            self.d = self.init_cities(2 * 5)\n",
@@ -51,9 +63,10 @@
     "        self.alpha = alpha\n",
     "        self.beta = beta\n",
     "        \n",
-    "        print(\"Initialized TSP with map:\")\n",
-    "        print(self.d)\n",
-    "        print(f\"Starting from town #{self.start}\")\n",
+    "        if self.verbose:\n",
+    "            print(\"Initialized TSP with map:\")\n",
+    "            print(self.d)\n",
+    "            print(f\"Starting from town #{self.start}\")\n",
     "    \n",
     "    \n",
     "    def init_cities(self, maxd:int) -> np.ndarray:\n",
@@ -61,25 +74,9 @@
     "        d = np.abs((d + d.T) // 2) + 1\n",
     "        np.fill_diagonal(d, 0)\n",
     "        return d\n",
-    "        \n",
-    "        \n",
-    "    def run(self, it:int, verbose:bool=False) -> None:\n",
-    "        minroad = ([], 1000000)\n",
-    "        for i in range(it):\n",
-    "            roads = [Ant(self.d, self.p, self.start, self.alpha, self.beta).walk() for _ in range(self.ants)]\n",
-    "            self.update_pheromones(roads, verbose)\n",
-    "            \n",
-    "            roadslength = [sum([c[1] for c in r]) for r in roads]\n",
-    "            roads = [[path[0] for path in r] for r in roads]\n",
-    "            bestroad = (np.argmin(roadslength), min(roadslength))\n",
-    "            \n",
-    "            minroad = (roads[bestroad[0]], bestroad[1]) if bestroad[1] < minroad[1] else minroad\n",
-    "            if verbose:\n",
-    "                print(*roads[bestroad[0]], bestroad[1])\n",
-    "        print(f\"Best road : {minroad}\")\n",
     "    \n",
     "    \n",
-    "    def update_pheromones(self, roads:list, verbose:bool=False) -> None:\n",
+    "    def update_pheromones(self, roads:list) -> None:\n",
     "        # evaporation\n",
     "        self.p *= .9\n",
     "        for road in roads:\n",
@@ -91,8 +88,24 @@
     "                self.p[c[0]][s] += self.q / d\n",
     "                s = c[0]\n",
     "                \n",
-    "            if verbose:\n",
+    "            if self.verbose:\n",
     "                print(d, self.p)\n",
+    "        \n",
+    "        \n",
+    "    def run(self, it:int) -> tuple:\n",
+    "        minroad = ([], 1000000)\n",
+    "        for i in range(it):\n",
+    "            roads = [Ant(self.d, self.p, self.start, self.alpha, self.beta).walk() for _ in range(self.ants)]\n",
+    "            self.update_pheromones(roads)\n",
+    "            \n",
+    "            roadslength = [sum([c[1] for c in r]) for r in roads]\n",
+    "            roads = [[path[0] for path in r] for r in roads]\n",
+    "            bestroad = (np.argmin(roadslength), min(roadslength))\n",
+    "            \n",
+    "            minroad = (roads[bestroad[0]], bestroad[1]) if bestroad[1] < minroad[1] else minroad\n",
+    "            if self.verbose:\n",
+    "                print(*roads[bestroad[0]], bestroad[1])\n",
+    "        return minroad\n",
     "    \n",
     "    \n",
     "class Ant:\n",
@@ -137,136 +150,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "interactive(children=(IntSlider(value=10, description='Ants count', max=30, min=2), Output()), _dom_classes=('…",
+      "text/plain": "HBox(children=(FloatProgress(value=0.0, max=50.0), HTML(value='')))",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "0c3c6e7e51494de2bfb014011ef4db46"
+       "model_id": "ab1e3192a73c4a8888e6f95a2766e021"
       }
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "interactive(children=(IntSlider(value=10, description='Cities count', max=30, min=1), Output()), _dom_classes=…",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "992f071b062d463d8e97bfa87eb65400"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "interactive(children=(IntSlider(value=10, description='Start from', max=30), Output()), _dom_classes=('widget-…",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "3e4416ae93574d90a3546b408533bca4"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "interactive(children=(FloatSlider(value=1.0, description='𝛼', max=1.0, step=0.01), Output()), _dom_classes=('w…",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "e3f798860bac41ba855f51b9ff56e6ff"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "interactive(children=(FloatSlider(value=10.0, description='𝛽', max=10.0, min=1.0, step=0.01), Output()), _dom_…",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "276ee691c5fc4d0f9752d59ba496f34d"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "interactive(children=(IntSlider(value=10, description='Iterations', max=1000, min=1), Output()), _dom_classes=…",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "f40f534fa49c470abddd290a0249b1ba"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "interactive(children=(FloatSlider(value=10.0, description='𝛾', max=30.0, min=-10.0, step=1.0), Output()), _dom…",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "a73cfa77129c459b9486fd3c6021aacf"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "interactive(children=(FloatSlider(value=10.0, description='Curiosity', max=30.0, min=-10.0, step=1.0), Output(…",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "c5802830e8ea4f2f9ed58f16d85b1dc8"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "text": [
-      "Initialized TSP with map:\n",
-      "[[ 0  4  2  2 11]\n",
-      " [ 4  0  2  1  3]\n",
-      " [ 2  2  0  8  6]\n",
-      " [ 2  1  8  0  3]\n",
-      " [11  3  6  3  0]]\n",
-      "Starting from town #2\n",
-      "Best road : ([2, 0, 3, 1, 4], 8)\n"
-     ],
-     "output_type": "stream"
     },
     {
      "name": "stderr",
      "text": [
-      "/anaconda3/envs/ml/lib/python3.7/site-packages/ipykernel_launcher.py:81: RuntimeWarning: divide by zero encountered in long_scalars\n",
-      "/anaconda3/envs/ml/lib/python3.7/site-packages/ipykernel_launcher.py:82: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "/anaconda3/envs/ml/lib/python3.7/site-packages/ipykernel_launcher.py:84: RuntimeWarning: invalid value encountered in double_scalars\n"
+      "/anaconda3/envs/ml/lib/python3.7/site-packages/ipykernel_launcher.py:89: RuntimeWarning: divide by zero encountered in long_scalars\n",
+      "/anaconda3/envs/ml/lib/python3.7/site-packages/ipykernel_launcher.py:90: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "/anaconda3/envs/ml/lib/python3.7/site-packages/ipykernel_launcher.py:92: RuntimeWarning: invalid value encountered in double_scalars\n"
+     ],
+     "output_type": "stream"
+    },
+    {
+     "name": "stdout",
+     "text": [
+      "\n",
+      "([0, 2, 11, 4, 9, 6, 8, 7, 10, 5, 3, 1], 28)\n",
+      "([0, 2, 9, 8, 11, 4, 6, 5, 10, 7, 3, 1], 23)\n",
+      "([0, 6, 5, 2, 11, 8, 10, 7, 9, 4, 3, 1], 27)\n",
+      "([0, 2, 4, 9, 7, 10, 11, 8, 6, 5, 3, 1], 28)\n",
+      "([0, 2, 9, 5, 3, 1, 8, 10, 7, 6, 4, 11], 30)\n",
+      "([0, 2, 11, 10, 5, 6, 4, 3, 7, 9, 1, 8], 28)\n",
+      "([0, 1, 10, 7, 3, 5, 2, 11, 8, 6, 4, 9], 26)\n",
+      "([0, 2, 1, 3, 7, 9, 4, 11, 8, 6, 10, 5], 29)\n",
+      "([0, 2, 5, 6, 3, 7, 10, 9, 4, 11, 1, 8], 31)\n",
+      "([0, 2, 5, 6, 8, 11, 4, 3, 1, 9, 10, 7], 25)\n",
+      "([0, 1, 8, 11, 4, 7, 3, 5, 10, 6, 2, 9], 29)\n",
+      "([0, 1, 3, 7, 10, 8, 6, 4, 11, 2, 5, 9], 28)\n",
+      "([0, 1, 9, 7, 3, 5, 2, 6, 4, 11, 10, 8], 29)\n",
+      "([0, 2, 6, 3, 7, 10, 5, 8, 11, 4, 9, 1], 26)\n",
+      "([0, 2, 11, 8, 6, 4, 3, 5, 10, 1, 9, 7], 27)\n",
+      "([0, 2, 11, 6, 4, 9, 3, 7, 10, 5, 8, 1], 28)\n",
+      "([0, 2, 5, 10, 9, 7, 6, 4, 11, 8, 3, 1], 31)\n",
+      "([0, 6, 8, 1, 11, 2, 5, 10, 7, 9, 4, 3], 30)\n",
+      "([0, 2, 6, 8, 11, 4, 9, 5, 10, 1, 3, 7], 28)\n",
+      "([0, 2, 6, 5, 10, 7, 8, 11, 4, 9, 3, 1], 25)\n",
+      "([0, 1, 3, 9, 4, 11, 8, 7, 10, 5, 2, 6], 27)\n",
+      "([0, 2, 11, 4, 6, 5, 8, 10, 9, 7, 3, 1], 29)\n",
+      "([0, 2, 4, 11, 8, 1, 3, 9, 6, 5, 10, 7], 29)\n",
+      "([0, 6, 2, 11, 4, 9, 3, 5, 10, 7, 1, 8], 28)\n",
+      "([0, 2, 11, 4, 7, 10, 5, 6, 8, 9, 3, 1], 27)\n",
+      "([0, 2, 5, 10, 11, 4, 6, 8, 9, 1, 3, 7], 27)\n",
+      "([0, 5, 6, 2, 11, 4, 3, 7, 10, 8, 9, 1], 29)\n",
+      "([0, 6, 4, 9, 8, 11, 2, 5, 10, 1, 3, 7], 28)\n",
+      "([0, 2, 9, 7, 10, 5, 8, 6, 4, 11, 1, 3], 28)\n",
+      "([0, 5, 10, 9, 8, 11, 2, 6, 4, 7, 3, 1], 30)\n",
+      "([0, 6, 2, 9, 7, 3, 5, 10, 4, 11, 8, 1], 29)\n",
+      "([0, 6, 2, 9, 7, 5, 10, 8, 11, 4, 3, 1], 30)\n",
+      "([0, 6, 5, 2, 9, 4, 11, 8, 3, 7, 10, 1], 30)\n",
+      "([0, 5, 2, 6, 4, 9, 8, 11, 10, 7, 3, 1], 28)\n",
+      "([0, 2, 6, 5, 4, 11, 8, 1, 3, 9, 10, 7], 27)\n",
+      "([0, 1, 9, 10, 7, 5, 3, 4, 11, 8, 6, 2], 29)\n",
+      "([0, 5, 10, 7, 3, 1, 9, 8, 11, 4, 6, 2], 25)\n",
+      "([0, 6, 10, 7, 3, 5, 2, 11, 8, 1, 9, 4], 27)\n",
+      "([0, 1, 3, 7, 10, 5, 9, 4, 11, 8, 6, 2], 26)\n",
+      "([0, 6, 4, 9, 3, 7, 10, 5, 2, 1, 11, 8], 29)\n",
+      "([0, 2, 6, 7, 10, 9, 3, 5, 4, 11, 8, 1], 29)\n",
+      "([0, 2, 9, 6, 8, 11, 4, 5, 10, 7, 3, 1], 27)\n",
+      "([0, 2, 11, 4, 3, 7, 10, 1, 9, 8, 6, 5], 28)\n",
+      "([0, 5, 3, 7, 10, 8, 11, 4, 6, 2, 1, 9], 28)\n",
+      "([0, 2, 9, 6, 4, 11, 8, 1, 10, 5, 3, 7], 29)\n",
+      "([0, 1, 8, 11, 4, 9, 7, 10, 5, 3, 6, 2], 28)\n",
+      "([0, 1, 3, 5, 10, 9, 7, 8, 6, 4, 11, 2], 30)\n",
+      "([0, 5, 10, 7, 3, 1, 8, 6, 2, 11, 4, 9], 25)\n",
+      "([0, 6, 7, 10, 8, 5, 3, 1, 9, 4, 11, 2], 29)\n",
+      "([0, 1, 9, 6, 4, 11, 8, 10, 7, 3, 5, 2], 28)\n"
      ],
      "output_type": "stream"
     }
@@ -289,8 +249,11 @@
     "# gamma = interact(lambda x: x, x=widgets.FloatSlider(min=-10, max=30, step=1, value=10, description=\"𝛾\"))\n",
     "# curiosity = interact(lambda x: x, x=widgets.FloatSlider(min=-10, max=30, step=1, value=10, description=\"Curiosity\"))\n",
     "\n",
-    "salesman = Salesman(5, 20, generate=False)\n",
-    "salesman.run(100, verbose=False)"
+    "benchmark = []\n",
+    "for i in tqdm(range(50)):\n",
+    "    salesman = Salesman(12, 50, start=0, generate=False, verbose=False)\n",
+    "    benchmark.append(salesman.run(100))\n",
+    "print(*benchmark, sep=\"\\n\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -302,10 +265,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "23\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
-    "\n"
+    "print(min([b[1] for b in benchmark]))\n"
    ],
    "metadata": {
     "collapsed": false,
